// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Gate /> render equals snapshot: Loading 1`] = `
<div
  data-testid="ut-front-test"
>
  <div
    class="h-full"
  >
    <div
      class="loaderContainer-0-2-2"
    >
      <div
        class="overlay-0-2-3"
      />
      <div
        class="loader-0-2-4"
      />
      <div
        class="message-0-2-5"
      >
        Loading...
      </div>
    </div>
  </div>
</div>
`;

exports[`<Gate /> render equals snapshot: Ready 1`] = `
<div
  data-testid="ut-front-test"
>
  <div
    class="h-full"
  >
    ready
  </div>
</div>
`;
